Set up build tools
- Add a `package.json`
- Use Parcel for bundling
- Use Tailwind CSS for styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hacker News</title>
-    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0">
     <link rel="stylesheet" href="index.css">
   </head>
-  <body class="sans-serif bg-near-white near-black">
+  <body class="font-sans bg-stone-100 text-stone-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
