--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body class="font-sans bg-stone-100 text-stone-900">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root">
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+    </div>
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
